--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,8 @@
         name="viewport"/>
   <meta content="#000000"
         name="theme-color"/>
-  <meta
-          content="Web site created using create-react-app"
-          name="description"/>
+  <meta content="Web site created using create-react-app"
+        name="description"/>
   <link href="%PUBLIC_URL%/logo192.png"
         rel="apple-touch-icon"/>
   <meta content="RedMotion"
@@ -21,6 +20,65 @@
         rel="preconnect">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap"
         rel="stylesheet">
+  <link href="./icons/apple-touch-icon-57x57.png"
+        rel="apple-touch-icon-precomposed"
+        sizes="57x57"/>
+  <link href="./icons/apple-touch-icon-114x114.png"
+        rel="apple-touch-icon-precomposed"
+        sizes="114x114"/>
+  <link href="./icons/apple-touch-icon-72x72.png"
+        rel="apple-touch-icon-precomposed"
+        sizes="72x72"/>
+  <link href="./icons/apple-touch-icon-144x144.png"
+        rel="apple-touch-icon-precomposed"
+        sizes="144x144"/>
+  <link href="./icons/apple-touch-icon-60x60.png"
+        rel="apple-touch-icon-precomposed"
+        sizes="60x60"/>
+  <link href="./icons/apple-touch-icon-120x120.png"
+        rel="apple-touch-icon-precomposed"
+        sizes="120x120"/>
+  <link href="./icons/apple-touch-icon-76x76.png"
+        rel="apple-touch-icon-precomposed"
+        sizes="76x76"/>
+  <link href="./icons/apple-touch-icon-152x152.png"
+        rel="apple-touch-icon-precomposed"
+        sizes="152x152"/>
+  <link href="./icons/favicon-196x196.png"
+        rel="icon"
+        sizes="196x196"
+        type="image/png"/>
+  <link href="./icons/favicon-96x96.png"
+        rel="icon"
+        sizes="96x96"
+        type="image/png"/>
+  <link href="./icons/favicon-32x32.png"
+        rel="icon"
+        sizes="32x32"
+        type="image/png"/>
+  <link href="./icons/favicon-16x16.png"
+        rel="icon"
+        sizes="16x16"
+        type="image/png"/>
+  <link href="./icons/favicon-128.png"
+        rel="icon"
+        sizes="128x128"
+        type="image/png"/>
+  <meta content="&nbsp;"
+        name="application-name"/>
+  <meta content="#FFFFFF"
+        name="msapplication-TileColor"/>
+  <meta content="mstile-144x144.png"
+        name="msapplication-TileImage"/>
+  <meta content="mstile-70x70.png"
+        name="msapplication-square70x70logo"/>
+  <meta content="mstile-150x150.png"
+        name="msapplication-square150x150logo"/>
+  <meta content="mstile-310x150.png"
+        name="msapplication-wide310x150logo"/>
+  <meta content="mstile-310x310.png"
+        name="msapplication-square310x310logo"/>
+
   <!--
     manifest.json provides metadata used when your web app is installed on a
     user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
